force-app/main/default/objects/Contact/fields/CC_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Salesforce_Id__c</fullName>
    <description>18-char case-safe Salesforce Contact Id, exposed as a normal (formula) field so the native Constant Contact connector can push it into a CC custom field during the SF-&gt;CC import. Gives the inbound poller a stable, unambiguous key to match CC records back to this Contact (avoids email-only matching). JSI-107 / Jason Ott.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Read-only Salesforce ID pushed into Constant Contact so opt-outs/bounces/engagement can be matched back. Do not use for anything else.</inlineHelpText>
    <label>Salesforce ID (for CC)</label>
    <type>Text</type>
</CustomField>