force-app/main/default/objects/Contact/fields/CC_Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Subscription_Status__c</fullName>
    <description>Constant Contact email permission/subscription state, mirrored into Salesforce so staff can see it on the Contact. Maps from CC permission_to_send / contact status. JSI-107 / Jason Ott.</description>
    <inlineHelpText>Current email subscription state in Constant Contact (synced). Unsubscribed also sets Email Opt Out.</inlineHelpText>
    <label>CC Subscription Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscribed</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <label>Pending Confirmation</label>
            </value>
            <value>
                <fullName>Cleaned</fullName>
            </value>
            <value>
                <fullName>Not Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>