force-app/main/default/objects/Contact/fields/Email_Clicks_Last_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Email_Clicks_Last_90_Days__c</fullName>
    <description>Rolling count of email clicks in the last 90 days, maintained by the CC engagement poller. Companion to Email_Opens_Last_90_Days__c. JSI-109 / Jason Ott.</description>
    <label>Email Clicks (Last 90 Days)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>