force-app/main/default/objects/Contact/fields/Email_Last_Bounce_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Last_Bounce_Date__c</fullName>
    <description>Date Constant Contact last reported a bounce for this Contact's email. Set by the inbound poller (DoD #5). JSI-107 / Jason Ott.</description>
    <inlineHelpText>Most recent date Constant Contact reported an email bounce for this contact.</inlineHelpText>
    <label>Email Last Bounce Date (CC)</label>
    <type>Date</type>
</CustomField>