force-app/main/default/objects/Contact/fields/Email_Last_Click__c.field-meta.xml
<CustomField>
    <fullName>Email_Last_Click__c</fullName>
    <description>Date this Contact last clicked a link in a Constant Contact email (engagement visibility, DoD #3, Option A summary field). Set by the inbound poller. JSI-107 / Jason Ott.</description>
    <inlineHelpText>Most recent date this contact clicked a link in a Constant Contact email.</inlineHelpText>
    <label>Email Last Clicked (CC)</label>
    <type>Date</type>
</CustomField>