force-app/main/default/objects/Contact/fields/Email_Last_Open__c.field-meta.xml
<CustomField>
    <fullName>Email_Last_Open__c</fullName>
    <description>Date this Contact last opened a Constant Contact email (engagement visibility, DoD #3, Option A summary field). Set by the inbound poller. JSI-107 / Jason Ott.</description>
    <inlineHelpText>Most recent date this contact opened a Constant Contact email.</inlineHelpText>
    <label>Email Last Opened (CC)</label>
    <type>Date</type>
</CustomField>