force-app/main/default/objects/Contact/fields/Email_Opens_Last_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Email_Opens_Last_90_Days__c</fullName>
    <description>Rolling count of Constant Contact email opens by this Contact in the last 90 days (engagement/re-engagement filtering, DoD #3, Option A). Maintained by the inbound poller. JSI-107 / Jason Ott.</description>
    <inlineHelpText>How many Constant Contact emails this contact has opened in the last 90 days (synced).</inlineHelpText>
    <label>Email Opens (Last 90 Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>